[package]
name = "zurf"
version = "0.2.0"
edition = "2024"
description = "A Z-Wave Zniffer UART protocol parser"
license = "LGPL-3.0-or-later"

[dependencies]
aes = { version = "0.9.0", default-features = false }
ccm = { version = "0.6.0-rc.3", default-features = false, features = ["alloc"] }
cmac = { version = "0.8.0", default-features = false }
clru = "0.6.1" # ◄ Added here
zurf_enum_derive = { path = "enum_derive", version = "0.1.1" } # ◄ Path is now relative to this folder

[dev-dependencies]
hex = "0.4.3"
hex-literal = "1.1.0"