[package]
name = "zurf_enum_derive"
version = "0.1.1"
edition = "2024"
description = "Internal enum deriving macro for the zurf Z-Wave Zniffer crate"
license = "LGPL-3.0-or-later"
repository = "https://github.com/michael-correia/zurf"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }

[lib]
proc-macro = true
